kubernetes/sonarqube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarqube-metrics
  labels:
    app.kubernetes.io/name: sonarqube-metrics
    app.kubernetes.io/part-of: sonarqube-metrics-stack
